--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     flex-direction: column;
 }
 
-ul li a {
+a {
     text-decoration: none;
     color: #e5e7eb;
 }
@@ -109,7 +109,7 @@ ul {
     flex-shrink: 0;
     width: 150px;
     height: 150px;
-    border-radius: 10px;
+    border-radius: 100px;
     border-width: 5px;
     border-style: solid; 
     border-color: #3882f6;
@@ -167,13 +167,16 @@ ul {
 }
 
 .call-to-action {
+    flex-wrap: wrap;
+    width: 750px;
     display: flex;
     background-color: #3882f6;
-    gap: 200px;
     justify-content: space-between;
     margin: 100px 25px;
     padding: 40px 100px;
     border-radius: 5px;
+    gap: 10px;
+    align-items: center;
 }
 
 .cto-header {
@@ -192,9 +195,9 @@ ul {
     background-color: #3882f6;
     border-color: #f9faf8;
     border-style: solid;
-    border-width: 2px;;
+    border-width: 2px;
     color:#e5e7eb;
-    padding: 0px 40px;
+    padding: 10px 40px;
     border-radius: 5px;
 }
 
